update to ip geoloc

--- a/sites/all/modules/contrib/ip_geoloc/css/ip_geoloc_admin.css
+++ b/sites/all/modules/contrib/ip_geoloc/css/ip_geoloc_admin.css
@@ -8,7 +8,7 @@ select.marker-color option {
 }
 
 select.marker-color option[value="drupal"] {
-  background: url(../markers/Drupal.png) no-repeat 2px 1px;
+  background: url(../markers/drupal.png) no-repeat 2px 1px;
 }
 select.marker-color option[value="blue"] {
   background: url(../markers/blue.png) no-repeat 2px 1px;
